@@ -90,8 +90,10 @@ resource "oci_core_instance" "this" {
   }
 
   metadata = {
-    ssh_authorized_keys = file(var.ssh_authorized_keys)
-    user_data           = var.user_data
+    ssh_authorized_keys = (var.ssh_public_key != "" ? var.ssh_public_key :
+      (var.ssh_public_key_path != "" ? file(var.ssh_public_key_path) :
+    (var.ssh_authorized_keys != "" ? file(var.ssh_authorized_keys) : "")))
+    user_data = var.user_data
   }
 
   source_details {
